--- a/index.html
+++ b/index.html
@@ -829,6 +829,15 @@ button[type="submit"],
     </p>
     <p>U must be connected via wallet to use this app.
     </p>
+    </p>
+    <p>If u dont have wallet, go to hashpack.app and create one.
+    </p>
+    </p>
+    <p>Its free and its takes 60 seconds.
+    </p>
+    </p>
+    <p>Same goes if u are uneducated how this technology works, u can create new wallet in under a minute. No ID needed.
+    </p>
   </div>
 </div>
 
@@ -7544,7 +7553,6 @@ async function processTopicMessages(topicId) {
           // Ownership logic
           const markerOwnershipArray = [];
           const polygonOwnershipArray = [];
-          const markerNumberChanges = [];
 
 
           if (hasRulesForMarker) {
