--- a/index.html
+++ b/index.html
@@ -724,13 +724,13 @@ button[type="submit"],
   background-color: white;
   border: 0.5vh solid #ccc; /* Use vh for border thickness */
   padding: 0.1em; /* Use em for padding */
-  z-index: 1003;
+  z-index: 1003000;
   box-shadow: 0 0 1vh rgba(0, 0, 0, 0.1); /* Use vh for shadow */
   border-radius: 3em; /* Use em for border radius */
   width: 80vw; /* Increase width */
   max-width: 90vw; /* Ensure it doesn't exceed viewport width */
   height: auto; /* Allow height to adjust based on content */
-  max-height: 60vh; /* Limit the height to ensure it fits on screen */
+  max-height: 65vh; /* Limit the height to ensure it fits on screen */
   line-height: 1.5em; /* Improve line spacing */
 }
 
@@ -823,7 +823,7 @@ button[type="submit"],
 
 <body>
 
-<div class="popup-welcome-msg" id="welcome-msg" style="display: none;">
+<div class="popup-welcome-msg" id="welcome-msg">
   <div class="popup-content-welcome">
     <p>Welcome to Hedera Network
     </p>
