--- a/index.html
+++ b/index.html
@@ -718,6 +718,8 @@ button[type="submit"],
 
 .popup-welcome-msg {
   position: fixed;
+  top: 50vh; /* Use vh for vertical positioning */
+  left: 50vw; /* Use vw for horizontal positioning */
   transform: translate(-50%, -50%);
   background-color: white;
   border: 0.5vh solid #ccc; /* Use vh for border thickness */
