--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ button[type="submit"],
   <div class="popup-content-welcome">
     <p>Welcome to Hedera Network
     </p>
-    <p>U must be connected via wallet to start.
+    <p>U must be connected via wallet to start communicating with Hedera Network.
     </p>
     </p>
     <p>If u dont have wallet, go to hashpack.app and create one.
