--- a/index.html
+++ b/index.html
@@ -833,10 +833,10 @@ button[type="submit"],
     <p>If u dont have wallet, go to hashpack.app and create one.
     </p>
     </p>
-    <p>Its free and its takes 60 seconds.
+    <p>Its free and its takes 60 seconds. No ID needed.
     </p>
     </p>
-    <p>Same goes if u are uneducated how this technology works, u can create new wallet in under a minute. No ID needed.
+    <p>Same goes if u are scared, u can create new wallet in under a minute.
     </p>
   </div>
 </div>
