--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@ button[type="submit"],
     <p>U must be connected via wallet to start communicating with Hedera Network.
     </p>
     </p>
-    <p>If u dont have wallet, go to hashpack.app and create one.
+    <p>If u dont have wallet, go to <a href="https://hashpack.app" target="_blank">hashpack.app</a> and create one.
     </p>
     </p>
     <p>Its free and its takes 60 seconds. No ID needed.
