--- a/index.html
+++ b/index.html
@@ -2021,7 +2021,7 @@ isLoggedIn = false;
   document.getElementById("connect-wallet-btn").style.display ="block";
   document.getElementById("disconnect-wallet-btn").style.display ="none";
   document.getElementById("account-id").textContent = ``;
-  document.getElementById("crosshair").style.display = "none";
+  document.getElementById("crosshair").style.display = "block";
   return;
 }
 
